Bug 22787 - [855GM] Cannot find LVDS modes
Summary: [855GM] Cannot find LVDS modes
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: ykzhao
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: NEEDINFO
: 22916 23399 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-15 13:45 UTC by Fatih Aşıcı
Modified: 2009-08-30 23:25 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (12.27 KB, text/plain)
2009-07-15 13:45 UTC, Fatih Aşıcı
no flags Details
rom.bin (64.00 KB, application/octet-stream)
2009-07-15 13:45 UTC, Fatih Aşıcı
no flags Details
Xorg.0.log with intel driver 2.7.1 (31.33 KB, text/plain)
2009-07-18 11:15 UTC, Fatih Aşıcı
no flags Details
Output of acpidump (100.69 KB, text/plain)
2009-07-18 11:16 UTC, Fatih Aşıcı
no flags Details
Output of dmidecode (8.55 KB, text/plain)
2009-07-18 11:17 UTC, Fatih Aşıcı
no flags Details
Output of lspci -vxxx (23.29 KB, text/plain)
2009-07-18 11:17 UTC, Fatih Aşıcı
no flags Details
try the debug patch in which the DVO timing is obtained by using the DVO timeoffset in LVDS data entry (1.07 KB, patch)
2009-07-19 18:08 UTC, ykzhao
no flags Details | Splinter Review
fredp - rom.bin (64.00 KB, application/octet-stream)
2009-07-23 23:56 UTC, Frederic Peters
no flags Details
fredp - dmidecode (9.89 KB, application/octet-stream)
2009-07-23 23:57 UTC, Frederic Peters
no flags Details
fredp - acpidump (85.94 KB, application/octet-stream)
2009-07-23 23:57 UTC, Frederic Peters
no flags Details
fredp - lspci -vxxx (21.43 KB, application/octet-stream)
2009-07-23 23:57 UTC, Frederic Peters
no flags Details
fredp - xorg.log (2.8.0+patch from comment 14) (17.11 KB, application/octet-stream)
2009-07-23 23:58 UTC, Frederic Peters
no flags Details
fredp - xorg.log (2.7.99.901) (25.84 KB, application/octet-stream)
2009-07-23 23:59 UTC, Frederic Peters
no flags Details

Description Fatih Aşıcı 2009-07-15 13:45:22 UTC
Created attachment 27727 [details]
Xorg.0.log

X server cannot start as the driver cannot detect LVDS modes.

Tested with xf86-video-intel-2.7.99.902 + UMS.
Comment 1 Fatih Aşıcı 2009-07-15 13:45:49 UTC
Created attachment 27728 [details]
rom.bin
Comment 2 Michael Fu 2009-07-15 18:16:36 UTC
need a xorg.log with option "modedebug" "true" in xorg.conf.. thanks.
Comment 3 Gordon Jin 2009-07-15 18:48:54 UTC
which version of intel driver ever worked on this machine?
Comment 4 Fatih Aşıcı 2009-07-16 04:30:42 UTC
(In reply to comment #2)
> need a xorg.log with option "modedebug" "true" in xorg.conf.. thanks.
> 

The server is already patched to make that option true by default.

(In reply to comment #3)
> which version of intel driver ever worked on this machine?

The user reports that he can install Pardus 2009 Alpha shipping with intel driver 2.7.1.
Comment 5 Fatih Aşıcı 2009-07-16 05:15:23 UTC
(In reply to comment #4)
> (In reply to comment #3)
> > which version of intel driver ever worked on this machine?
> 
> The user reports that he can install Pardus 2009 Alpha shipping with intel
> driver 2.7.1.
> 

Sorry, he might be installed using fbdev. I am waiting a reply from him.

The user had reported the same issue when we use intel driver 2.4.3. We solved the issue with the patches here:

http://svn.pardus.org.tr/pardus/2008/devel/desktop/freedesktop/xorg/xorg-video/files/intel/

Probably this one solved:

http://svn.pardus.org.tr/pardus/2008/devel/desktop/freedesktop/xorg/xorg-video/files/intel/ubuntu/26_i830-use-lfp-data-ptrs.patch
Comment 6 Fatih Aşıcı 2009-07-16 09:50:37 UTC
(In reply to comment #5)
> (In reply to comment #4)
> > (In reply to comment #3)
> > > which version of intel driver ever worked on this machine?
> > 
> > The user reports that he can install Pardus 2009 Alpha shipping with intel
> > driver 2.7.1.
> > 
> 
> Sorry, he might be installed using fbdev. I am waiting a reply from him.

Yes, he said that he used intel driver 2.7.1 and no problem occurs. It doesn't work after upgrading to 2.7.99.902.
Comment 7 Michael Fu 2009-07-16 17:45:09 UTC
would you please ask the bug reporter to attach the following:

1) a xorg.log with option "modedebug" "true" in xorg.conf
2) vbios dump. you can get vbios dump via:

# cd /sys/devices/pci0000\:00/0000\:00\:02.0/
# echo 1 > rom
# cat rom > /tmp/rom.bin
# echo 0 > rom

thanks.
Comment 8 ykzhao 2009-07-16 17:50:29 UTC
> Yes, he said that he used intel driver 2.7.1 and no problem occurs. It doesn't
> work after upgrading to 2.7.99.902.
From the Xorg log it seems that there is no EDID for LVDS. At the same time from the rom.bin it seems that there is no integrated LVDS controller.
   >LVDS config: No LVDS
Will you please ask the bug reporter double check whether the 2.7.1 driver can work well? If it can work, please attach the Xorg log on intel driver 2.7.1.
Please also attach the output of acpidump, dmidecode, lspci -vxxx.
Thanks.


Comment 9 Michael Fu 2009-07-16 17:56:11 UTC
(In reply to comment #7)
> 2) vbios dump. you can get vbios dump via:
> 
> # cd /sys/devices/pci0000\:00/0000\:00\:02.0/
> # echo 1 > rom
> # cat rom > /tmp/rom.bin
> # echo 0 > rom
> 
> thanks.
> 
Oh, it's been attached. stupid me... never mind..
Comment 10 Fatih Aşıcı 2009-07-18 11:15:27 UTC
Created attachment 27812 [details]
Xorg.0.log with intel driver 2.7.1
Comment 11 Fatih Aşıcı 2009-07-18 11:16:35 UTC
Created attachment 27813 [details]
Output of acpidump
Comment 12 Fatih Aşıcı 2009-07-18 11:17:17 UTC
Created attachment 27814 [details]
Output of dmidecode
Comment 13 Fatih Aşıcı 2009-07-18 11:17:52 UTC
Created attachment 27815 [details]
Output of lspci -vxxx
Comment 14 ykzhao 2009-07-19 18:08:32 UTC
Created attachment 27837 [details] [review]
try the debug patch in which the DVO timing is obtained by using the DVO timeoffset in LVDS data entry

Will you please try the debug patch and see whether the issue still exists?
Thanks.
Comment 15 Fatih Aşıcı 2009-07-20 09:31:08 UTC
(In reply to comment #14)
> Created an attachment (id=27837) [details]
> try the debug patch in which the DVO timing is obtained by using the DVO
> timeoffset in LVDS data entry
> 
> Will you please try the debug patch and see whether the issue still exists?
> Thanks.
> 

This patch fixes the issue. Thanks.
Comment 16 ykzhao 2009-07-23 20:12:17 UTC
*** Bug 22916 has been marked as a duplicate of this bug. ***
Comment 17 Frederic Peters 2009-07-23 23:56:10 UTC
I am from the duplicated bug report and the patch doesn't fix the issue; I'll attach a serie of files.
Comment 18 Frederic Peters 2009-07-23 23:56:45 UTC
Created attachment 27967 [details]
fredp - rom.bin
Comment 19 Frederic Peters 2009-07-23 23:57:10 UTC
Created attachment 27968 [details]
fredp - dmidecode
Comment 20 Frederic Peters 2009-07-23 23:57:35 UTC
Created attachment 27969 [details]
fredp - acpidump
Comment 21 Frederic Peters 2009-07-23 23:57:55 UTC
Created attachment 27970 [details]
fredp - lspci -vxxx
Comment 22 Frederic Peters 2009-07-23 23:58:46 UTC
Created attachment 27971 [details]
fredp - xorg.log (2.8.0+patch from comment 14)
Comment 23 Frederic Peters 2009-07-23 23:59:15 UTC
Created attachment 27972 [details]
fredp - xorg.log (2.7.99.901)
Comment 24 ykzhao 2009-07-24 02:21:53 UTC
(In reply to comment #22)
> Created an attachment (id=27971) [details]
> fredp - xorg.log (2.8.0+patch from comment 14)
Will you please double check it again?
I already check the vbios bin and find that the correct preferred mode can be parsed from VBT after applying the patch.

Thanks.
> 

Comment 25 ykzhao 2009-07-24 02:23:00 UTC
(In reply to comment #22)
> Created an attachment (id=27971) [details]
> fredp - xorg.log (2.8.0+patch from comment 14)
Will you please double check it again?
I already check the vbios bin and find that the correct preferred mode can be
parsed from VBT after applying the patch. 
But from the xorg log it seems that it still can't be parsed correctly.
Please double check it again.

Thanks.

> 

Comment 26 Frederic Peters 2009-07-24 03:14:38 UTC
Thanks for checking back, indeed I was wrong and somehow the drivers got installed into an incorrect location.  Once installed properly X started correctly.
Comment 27 Rémi Cardona 2009-07-29 01:17:00 UTC
Can/Should the patch be committed to git?

Thanks
Comment 28 Michael Fu 2009-08-04 17:54:45 UTC
commit cdaa052b05e26d96a990af5d253fd2af5db2b1fc
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Tue Jul 28 10:54:13 2009 +0800

    drm/I915: Fix offset to DVO timings in LVDS data
Comment 29 Rémi Cardona 2009-08-14 00:19:43 UTC
I can't find the corresponding commit in xf86-video-intel. Has it been committed?

Thanks
Comment 30 ykzhao 2009-08-14 00:59:31 UTC
the commit in comment #28 is for the KMS version.
The commit id for UMS is

commit af45482a52999b52bf41468c458808e30c100e35
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Fri Jul 24 10:44:20 2009 +0800

    Calculate the DVO relative offset in LVDS data entry to get the DVO timing

Thanks.
Comment 31 ykzhao 2009-08-30 23:25:47 UTC
*** Bug 23399 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.